basic HTML set up

--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game</title>
+  <title>Get all the bugs</title>
   <script src="scripts/app.js"></script>
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+  <header>
+    <h1>Get all the Bugs!!!</h1>
+  </header>
   
+    <div class='container'>
+      <div class="container-2">
+        <h2>Aim of the game</h2>
+        <p>Try and get all the bugs before they invade</p>
+      </div>
+    </div>
+
+    <div class="grid">
+    </div>
+    <button class="start">Attack</button>
+    <button class="restart">Try Again</button>
+    
 </body>
 </html>
