--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Get all the Bugs!!!</h1>
+    <h1 class="title">Get all the Bugs!!!</h1>
   </header>
   
     <div class='container'>
@@ -23,6 +23,6 @@
     </div>
     <button class="start">Attack</button>
     <button class="restart">Try Again</button>
-    
+
 </body>
 </html>
