--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
         <p>Try and get all the bugs before they invade</p>
       </div>
     </div>
+  </div>
 
+  <div class="grid-wrapper">
     <div class="grid">
     </div>
+  </div>
+
+
+  
     <button class="start">Attack</button>
     <button class="restart">Try Again</button>
 
