--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
         <p>Try and get all the bugs before they invade</p>
       </div>
     </div>
-  </div>
 
   <div class="grid-wrapper">
-    <div class="grid">
+    <div class="grid"> 
     </div>
+    
   </div>
+    <p class="grid-2"> 
+    </p>
+    
+
 
 
   
