--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,32 +8,37 @@
   <script src="scripts/app.js"></script>
   <link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body>
   <header>
     <h1 class="title">Get all the Bugs!!!</h1>
   </header>
-  
-    <div class='container'>
-      <div class="container-2">
-        <h2>Aim of the game</h2>
-        <p>Try and get all the bugs before they invade</p>
-      </div>
+
+  <div class='container'>
+    <div class="container-2">
+      <h2>Aim of the game</h2>
+      <p>Try and get all the bugs before they invade</p>
     </div>
+  </div>
 
   <div class="grid-wrapper">
-    <div class="grid"> 
+    <div class="grid">
     </div>
-    
+
   </div>
-    <p class="grid-2"> 
-    </p>
-    
+  <div class="grid-2-container">
+    <p class="grid-2"></p>
+  </div>
+  <div class="game-over">Game Over</div>
 
-
-
-  
+  <div class="start-container">
     <button class="start">Attack</button>
+  </div>
+  <div class="restart-container">
     <button class="restart">Try Again</button>
+  </div>
+
 
 </body>
+
 </html>
