some css and also score board

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
 
   <div class='container'>
+    <div>Score:<span class="score"></span></div>
     <div class="container-2">
       <h2>Aim of the game</h2>
       <p>Try and get all the bugs before they invade</p>
